Add clone & compile information