@@ -1,2 +1,11 @@
 # Pascani
 A Domain Specific Language for realizing monitoring concerns
+
+## Clone & Compile the source code
+
+```bash
+export MAVEN_OPTS="-Xmx512M -XX:MaxPermSize=512M"
+git clone https://github.com/unicesi/pascani
+cd pascani
+mvn install -file maven/org.pascani.tycho.parent/pom.xml
+```
